[tool.poetry]
name = "lsu-pilot"
version = "0.1.0"
description = ""
authors = ["Pedro Javier Martos Velasco <pmartos@theworkshop.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.52.1"
python-dotenv = "^1.0.1"
python-telegram-bot = "^21.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
